Updating documentations, changing style to handle hovering invisibility bug, trimming code

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,5 @@
+// Please don't read this
+
 #root {
     height: 100%;
     display: flex;
@@ -69,13 +71,10 @@ body {
     }
     &:hover{
         background: rgba(0,0,0,0);
-        color: #666666;
+        color: #ffffff;
         box-shadow: inset 0 0 0 3px #666666;
     }
 }
-
-
-
 
 // Form Styling
 h3, h4, h2 {
